@@ -80,6 +80,7 @@ I want to thank the help and the collaboration of the following people (date sor
 -Шарихин Александр Сергеевич, for granting permission to add his "Touhou Zero. Lost Donation Box Incident" game, for help and suggestions 
 -Stefan Bylund, helping me with tbblue layer2 extended modes
 -Kio, for granting permission to add his beautiful keyboard images from his zxsp emulator
+-Rafa (aka Spirax), for reporting the CPC CRTC interrupts bug
 
 
 -Everyone at several forums about Spectrum, ZX80, ZX81, Z88, Raspberry Pi, etc for all the suggestions to my emulator
