@@ -93,4 +93,6 @@ extern z80_bit cpc_send_double_vsync;
 
 extern void cpc_handle_vsync_state(void);
 
+extern z80_bit cpc_crt_pending_interrupt;
+
 #endif
